// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Progress /> Accessibility renders the component with props with no a11y violations 1`] = `
.c1 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c0 {
  margin-left: 6px;
  margin-right: 6px;
}

.c2 {
  position: relative;
  width: 100%;
  border-radius: 100px;
  background: #EFEFEF;
  height: 4px;
}

.c8 {
  width: 37.5%;
  position: relative;
  border-radius: 100px;
  height: 4px;
  display: block;
  background: #009E8E;
  -webkit-transition: width 0.5s ease-in-out;
  transition: width 0.5s ease-in-out;
}

.c8 > span {
  position: absolute;
  top: 10px;
  right: 0;
  font-size: 14px;
  line-height: 16px;
  font-weight: 600;
  color: #2C3236;
}

.c3 {
  position: absolute;
  top: 50%;
  left: 0%;
  display: block;
  width: 12px;
  height: 12px;
  background: #009E8E;
  border-radius: 100%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c4 {
  position: absolute;
  top: 50%;
  left: 25%;
  display: block;
  width: 12px;
  height: 12px;
  background: #009E8E;
  border-radius: 100%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c5 {
  position: absolute;
  top: 50%;
  left: 50%;
  display: block;
  width: 12px;
  height: 12px;
  background: #EFEFEF;
  border-radius: 100%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c6 {
  position: absolute;
  top: 50%;
  left: 75%;
  display: block;
  width: 12px;
  height: 12px;
  background: #EFEFEF;
  border-radius: 100%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c7 {
  position: absolute;
  top: 50%;
  left: 100%;
  display: block;
  width: 12px;
  height: 12px;
  background: #EFEFEF;
  border-radius: 100%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
      id="in-progress"
    >
      In progress
    </span>
    <div
      aria-labelledby="in-progress"
      aria-valuemax="5"
      aria-valuenow="2"
      aria-valuetext="Static progress bar showing step 2 of 5"
      class="c2"
      role="progressbar"
    >
      <span
        class="c3"
      />
      <span
        class="c4"
      />
      <span
        class="c5"
      />
      <span
        class="c6"
      />
      <span
        class="c7"
      />
      <div
        class="c8"
      />
    </div>
  </div>
</div>
`;

exports[`<Progress /> Props renders empty progress bar 1`] = `
.c1 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c0 {
  margin-left: 6px;
  margin-right: 6px;
}

.c2 {
  position: relative;
  width: 100%;
  border-radius: 100px;
  background: #EFEFEF;
  height: 4px;
}

.c8 {
  width: 0%;
  position: relative;
  border-radius: 100px;
  height: 4px;
  display: block;
  background: #009E8E;
  -webkit-transition: width 0.5s ease-in-out;
  transition: width 0.5s ease-in-out;
}

.c8 > span {
  position: absolute;
  top: 10px;
  right: 0;
  font-size: 14px;
  line-height: 16px;
  font-weight: 600;
  color: #2C3236;
}

.c5 {
  position: absolute;
  top: 50%;
  left: 50%;
  display: block;
  width: 12px;
  height: 12px;
  background: #EFEFEF;
  border-radius: 100%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c6 {
  position: absolute;
  top: 50%;
  left: 75%;
  display: block;
  width: 12px;
  height: 12px;
  background: #EFEFEF;
  border-radius: 100%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c7 {
  position: absolute;
  top: 50%;
  left: 100%;
  display: block;
  width: 12px;
  height: 12px;
  background: #EFEFEF;
  border-radius: 100%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c3 {
  position: absolute;
  top: 50%;
  left: 0%;
  display: block;
  width: 12px;
  height: 12px;
  background: #EFEFEF;
  border-radius: 100%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c4 {
  position: absolute;
  top: 50%;
  left: 25%;
  display: block;
  width: 12px;
  height: 12px;
  background: #EFEFEF;
  border-radius: 100%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

<div
  class="c0"
>
  <span
    class="c1"
    id="in-progress"
  >
    In progress
  </span>
  <div
    aria-labelledby="in-progress"
    aria-valuemax="5"
    aria-valuenow="0"
    aria-valuetext="Static progress bar showing step 0 of 5"
    class="c2"
    role="progressbar"
  >
    <span
      class="c3"
    />
    <span
      class="c4"
    />
    <span
      class="c5"
    />
    <span
      class="c6"
    />
    <span
      class="c7"
    />
    <div
      class="c8"
    />
  </div>
</div>
`;

exports[`<Progress /> Props renders full progress bar 1`] = `
.c1 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c0 {
  margin-left: 6px;
  margin-right: 6px;
}

.c2 {
  position: relative;
  width: 100%;
  border-radius: 100px;
  background: #EFEFEF;
  height: 4px;
}

.c8 {
  width: 100%;
  position: relative;
  border-radius: 100px;
  height: 4px;
  display: block;
  background: #009E8E;
  -webkit-transition: width 0.5s ease-in-out;
  transition: width 0.5s ease-in-out;
}

.c8 > span {
  position: absolute;
  top: 10px;
  right: 0;
  font-size: 14px;
  line-height: 16px;
  font-weight: 600;
  color: #2C3236;
}

.c3 {
  position: absolute;
  top: 50%;
  left: 0%;
  display: block;
  width: 12px;
  height: 12px;
  background: #009E8E;
  border-radius: 100%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c4 {
  position: absolute;
  top: 50%;
  left: 25%;
  display: block;
  width: 12px;
  height: 12px;
  background: #009E8E;
  border-radius: 100%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c5 {
  position: absolute;
  top: 50%;
  left: 50%;
  display: block;
  width: 12px;
  height: 12px;
  background: #009E8E;
  border-radius: 100%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c6 {
  position: absolute;
  top: 50%;
  left: 75%;
  display: block;
  width: 12px;
  height: 12px;
  background: #009E8E;
  border-radius: 100%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c7 {
  position: absolute;
  top: 50%;
  left: 100%;
  display: block;
  width: 12px;
  height: 12px;
  background: #009E8E;
  border-radius: 100%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

<div
  class="c0"
>
  <span
    class="c1"
    id="in-progress"
  >
    In progress
  </span>
  <div
    aria-labelledby="in-progress"
    aria-valuemax="5"
    aria-valuenow="5"
    aria-valuetext="Static progress bar showing step 5 of 5"
    class="c2"
    role="progressbar"
  >
    <span
      class="c3"
    />
    <span
      class="c4"
    />
    <span
      class="c5"
    />
    <span
      class="c6"
    />
    <span
      class="c7"
    />
    <div
      class="c8"
    />
  </div>
</div>
`;
